--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
   "author": "ragilwiradiputra",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.0",
     "@types/log4js": "^2.3.5",
+    "@types/mongoose": "^5.5.31",
     "@types/socket.io": "^2.1.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "log4js": "^4.5.1",
+    "mongoose": "^5.7.11",
     "socket.io": "^2.2.0",
+    "ts-mongoose": "0.0.21",
     "ts-node-dev": "^1.0.0-pre.40",
     "typescript": "^3.5.3"
   }
